--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@
   background-color: #4CAF50;
   color: white;
 }
+
+p {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
+}
