--- a/style.css
+++ b/style.css
@@ -27,3 +27,9 @@
   color: white;
 }
 
+p {
+  margin-top: 25px;	  margin-top: auto;
+  margin-bottom: 25px;	  margin-bottom: auto;
+  margin-right: 150px;	  margin-right: 150px;
+  margin-left: 80px;	  margin-left: 80px;
+}
