--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 }
 
 p {
-  margin-top: 25px;	  margin-top: auto;
-  margin-bottom: 25px;	  margin-bottom: auto;
-  margin-right: 150px;	  margin-right: 150px;
-  margin-left: 80px;	  margin-left: 80px;
+  margin-top: 25px;	 
+  margin-bottom: 25px;	
+  margin-right: 150px;	
+  margin-left: 80px;	
 }
