--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: 'Asap', sans-serif;
   font-size: 17px;
 }
 
@@ -23,7 +24,7 @@
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #3498db;
   color: white;
 }
 
