--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@
   font-size: 17px;
 }
 
+video {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
