--- a/style.css
+++ b/style.css
@@ -1,23 +1,64 @@
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
 .button {
   /* default for <button>, but useful for <a> */
   display: inline-block;
   text-align: center;
   text-decoration: none;
 
-   /* create a small space when buttons wrap on 2 lines */
+  /* create a small space when buttons wrap on 2 lines */
   margin: 2px 0;
 
-   /* invisible border (will be colored on hover/focus) */
+  /* invisible border (will be colored on hover/focus) */
   border: solid 1px transparent;
   border-radius: 4px;
 
-   /* size comes from text & padding (no width/height) */
+  /* size comes from text & padding (no width/height) */
   padding: 0.5em 1em;
 
-   /* make sure colors have enough contrast! */
+  /* make sure colors have enough contrast! */
   color: #ffffff;
   background-color: #9555af;
 }
-#sectiontohide1 { 	#sectiontohide1 { 
-  display: none;	  display: none;
-}	}
+#sectiontohide1 { 
+  display: none;
+}
+#sectiontohide2 { 
+  display: none;
+}
+.hidden { visibility: hidden; }
+.unhidden { visibility: visible; }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: 'Asap', sans-serif;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #3498db;
+  color: white;
+}
+
+p {
+  margin-top: 25px;	 
+  margin-bottom: 25px;	
+  margin-right: 150px;	
+  margin-left: 80px;	
+}
