--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2901,7 +2901,7 @@
 			}
 
 				#header.alt nav a {
-					color: #ddd;
+					color: #DE3B18;
 				}
 
 					#header.alt nav a:active, #header.alt nav a:hover {
